<?xml version="1.0"?>
<package format="2">
  <name>ros_blackbox_exporter</name>
  <version>0.1.0</version>
  <description>The ros_blackbox_exporter package</description>
  <maintainer email="muetsch@kit.edu">Ferdinand Mütsch</maintainer>
  <license>MIT</license>

  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>rclpy</depend>
  <depend>ros2cli</depend>
  <depend>rosidl_runtime_py</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
